umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_methylglyoxal.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DbC
    atoms:
      - "{CH3v1}"
      - "{Cv4}"
      - "{O/2v2}"
      - "{CH1v3}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "="
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DbC
    atoms:
      - "{CH3v1}"
      - "{Cv4}"
      - "{O/2v2}"
      - "{CH1v3}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "="
      - "-"
      - "="
