umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_n,n-dimethylacetamide.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: "E`_o"
    atoms:
      - "C#h3#v"
      - "C#v4"
      - "O#n2#v2"
      - "N#n#v3"
      - "C#h3#v"
      - "C#h3#v"
    bonds:
      - "-"
      - "="
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: "E`_o"
    atoms:
      - "C#h3#v"
      - "C#v4"
      - "O#n2#v2"
      - "N#n#v3"
      - "C#h3#v"
      - "C#h3#v"
    bonds:
      - "-"
      - "="
      - "-"
      - "-"
      - "-"
