umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_n-methylacetamide.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DbC
    atoms:
      - "C#h3#v"
      - "C#v4"
      - "O#n2#v2"
      - "N#h#n#v2"
      - "C#h3#v"
    bonds:
      - "-"
      - "="
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DbC
    atoms:
      - "C#h3#v"
      - "C#v4"
      - "O#n2#v2"
      - "N#h#n#v2"
      - "C#h3#v"
    bonds:
      - "-"
      - "="
      - "-"
      - "-"
