umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_n-methylformamide.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cp
    atoms:
      - "C#h#v3"
      - "O#n2#v2"
      - "N#h#n#v2"
      - "C#h3#v"
    bonds:
      - "="
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cp
    atoms:
      - "C#h#v3"
      - "O#n2#v2"
      - "N#h#n#v2"
      - "C#h3#v"
    bonds:
      - "="
      - "-"
      - "-"
