umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_oxalic-acid.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#v4" "1" "O#n2#v2" "2" "O#h#n2#v" "3" "C#v4" "4" "O#n2#v2" "5" "O#h#n2#v"} :bonds [["0" "1" "2"] ["0" "2" "1"] ["0" "3" "1"] ["3" "4" "2"] ["3" "5" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#v4" "1" "O#n2#v2" "2" "O#h#n2#v" "3" "C#v4" "4" "O#n2#v2" "5" "O#h#n2#v"} :bonds [["0" "1" "2"] ["0" "2" "1"] ["0" "3" "1"] ["3" "4" "2"] ["3" "5" "1"]] :charge 0 :spin "#u0 #s1"}}}
