umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_pentan-3-one.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: "E`EO"
    atoms:
      - "{CH3v1}"
      - "{CH2v2}"
      - "{Cv4}"
      - "{CH2v2}"
      - "{O/2v2}"
      - "{CH3v1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: "E`EO"
    atoms:
      - "{CH3v1}"
      - "{CH2v2}"
      - "{Cv4}"
      - "{CH2v2}"
      - "{O/2v2}"
      - "{CH3v1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
