umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_propanal.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "C#h3#v"
      - "C#h2#v2"
      - "C#h#v3"
      - "O#n2#v2"
    bonds:
      - "-"
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "C#h3#v"
      - "C#h2#v2"
      - "C#h#v3"
      - "O#n2#v2"
    bonds:
      - "-"
      - "-"
      - "="
